--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3,3 +3,7 @@
 	height: 200px;
 	background: #aaa;
 }
+
+body,h1 {font-family: "Raleway", Arial, sans-serif}
+h1 {letter-spacing: 6px}
+.w3-row-padding img {margin-bottom: 12px}
