--- a/src/main/webapp/css/zipsboard.css
+++ b/src/main/webapp/css/zipsboard.css
@@ -41,6 +41,24 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.testbb span {
+  background: linear-gradient(to right, #00D8FF, #D4F4FA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.testbb {
+  display: inline-block;
+  margin: 30px auto 0;
+  font-family: 'Roboto', sans-serif;
+  background: #fff;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+}
+
 	.circle {
 		background: #fff;
 		border-radius: 100%;
@@ -146,4 +164,115 @@
     100% {opacity:1;}
 }
 
+
+
+a:visited {
+	text-decoration:none;
+	outline:none;
+	color:#54a6de;
+}
+
+a:hover{
+	text-decoration:underline;
+}
+
+
+
+/*----------------------------
+	Container & textbox
+-----------------------------*/
+
+
+#container{
+	color: #555;
+	font-size: 58px;
+	margin: 0 auto;
+	padding: 200px 0 100px;
+	width: 650px;
+	position:relative;
+	min-height: 90px;
+	
+	font-family:'Open Sans Condensed',sans-serif;
+	text-shadow:1px 1px 0 rgba(255,255,255,0.5);
+}
+
+#container:before{
+	content: ">";
+	font-size: 50px;
+	left: -40px;
+	opacity: 0.25;
+	position: absolute;
+	text-shadow: 1px 1px 0 white;
+	top: 210px;
+}
+
+#userText{
+	background:none;
+	border:none;
+	border-bottom:1px solid #aaa;
+	
+	color: #777777;
+    display: block;
+    font-family: 'Open Sans Condensed',sans-serif;
+    font-size: 26px;
+    margin: 0 auto 0px;
+    padding: 10px;
+    text-align: center;
+    width: 300px;
+    outline: none;
+}
+
+
+
+/*----------------------------
+	The Footer
+-----------------------------*/
+
+
+footer{
+	display:block;
+	background-color:#212121;
+	box-shadow: 0 -1px 2px #111;
+	position:fixed;
+	width:100%;
+	height:70px;
+	bottom:0;
+	left:0;
+	z-index: 100000;
+}
+
+footer h2{
+	font-size:20px;
+	font-weight:normal;
+	left:50%;
+	margin-left:-400px;
+	padding:22px 0;
+	position:absolute;
+	width: 540px;
+	color:#eee;
+}
+
+footer a.tzine,a.tzine:visited{
+	background:url("../img/tzine.png") no-repeat right top;
+	border:none;
+	text-decoration:none;
+	color:#FCFCFC;
+	font-size:12px;
+	height:70px;
+	left:50%;
+	line-height:31px;
+	margin:23px 0 0 110px;
+	position:absolute;
+	top:0;
+	width:290px;
+}
+
+.rainbow {
+  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  color:transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+    
     
