--- a/src/main/webapp/css/zipsboard.css
+++ b/src/main/webapp/css/zipsboard.css
@@ -1,5 +1,4 @@
-<!-- 판매중, 구매중 표시 -->
- a.btn_worry em.off {
+  em.off {
     display: inline-block;
     border-radius: 3px;
     border: 1px solid #aaa;
@@ -11,7 +10,7 @@
     letter-spacing: -0.04em;
     }
     
-  a.btn_worry em.on {
+  em.on {
     display: inline-block;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
@@ -26,7 +25,7 @@
     letter-spacing: -0.04em;
 	}	
 
- a.btn_worry em.oning {
+ em.oning {
     display: inline-block;
     border-radius: 3px;
     border: 1px solid #aaa;
@@ -264,48 +263,6 @@ a:hover{
 
 
 
-/*----------------------------
-	The Footer
------------------------------*/
-
-
-footer{
-	display:block;
-	background-color:#212121;
-	box-shadow: 0 -1px 2px #111;
-	position:fixed;
-	width:100%;
-	height:70px;
-	bottom:0;
-	left:0;
-	z-index: 100000;
-}
-
-footer h2{
-	font-size:20px;
-	font-weight:normal;
-	left:50%;
-	margin-left:-400px;
-	padding:22px 0;
-	position:absolute;
-	width: 540px;
-	color:#eee;
-}
-
-footer a.tzine,a.tzine:visited{
-	background:url("../img/tzine.png") no-repeat right top;
-	border:none;
-	text-decoration:none;
-	color:#FCFCFC;
-	font-size:12px;
-	height:70px;
-	left:50%;
-	line-height:31px;
-	margin:23px 0 0 110px;
-	position:absolute;
-	top:0;
-	width:290px;
-}
 
 .rainbow {
   background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
