--- a/src/main/webapp/css/zipsboard.css
+++ b/src/main/webapp/css/zipsboard.css
@@ -210,11 +210,9 @@ a:visited {
 	outline:none;
 	color:#54a6de;
 }
-
-a:hover{
-	text-decoration:underline;
-}
-
+ a:link { color: black; text-decoration: none;}
+ a:visited { color: black; text-decoration: none;}
+ a:hover { color: blue; text-decoration: none;}
 
 
 /*----------------------------
